popup markup start

--- a/app/styles.less/popup.less
+++ b/app/styles.less/popup.less
@@ -1,3 +1,35 @@
-h1 {
-  color: green;
+@import "common/reset";
+@import "common/grid";
+
+.popup-wrapper {
+  width: 300px;
+  height: 317px;
+  background-color: #fff;
+  .top-panel {
+    height: 90px;
+  }
+  .ad-trigger-block {
+
+  }
+  .class-icon {
+    float: left;
+    width: 32px;
+    height: 39px;
+    margin-left: 14px;
+    margin-top: 14px;
+    img {
+      width: 100%;
+    }
+  }
+  .cog-icon {
+    float: right;
+    width: 24px;
+    height: 24px;
+    margin-right: 10px;
+    margin-top: 12px;
+    outline: none;
+    img {
+      width: 100%;
+    }
+  }
 }
