--- a/app/styles.less/popup.less
+++ b/app/styles.less/popup.less
@@ -1,17 +1,24 @@
 @import "common/reset";
 @import "common/grid";
+@import "elements/toggle_switch";
 
-.popup-wrapper {
+.ab-popup-wrapper {
+  position: relative;
+  border-left: 1px solid #fff;
   width: 300px;
   height: 317px;
   background-color: #fff;
-  .top-panel {
+  .ab-top-panel {
     height: 90px;
   }
-  .ad-trigger-block {
-
+  .ab-ad-toggle-wrap {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    .ab-ad-toggle {
+    }
   }
-  .class-icon {
+  .ab-icon-class {
     float: left;
     width: 32px;
     height: 39px;
@@ -21,7 +28,7 @@
       width: 100%;
     }
   }
-  .cog-icon {
+  .ab-icon-cog {
     float: right;
     width: 24px;
     height: 24px;
@@ -31,5 +38,74 @@
     img {
       width: 100%;
     }
+  }
+  .ab-popup-menu {
+    width: 100%;
+    font-size: 12px;
+    color: #909096;
+    padding: 16px 59px 0;
+    .ab-popup-menu-item {
+      width: 100%;
+      float: left;
+      padding-left: 15px;
+      padding-top: 23px;
+      line-height: 20px;
+      .ab-icon-warning {
+        float: left;
+        padding-right: 10px;
+      }
+      .ab-icon-picker {
+        float: left;
+        padding-right: 10px;
+      }
+    }
+  }
+  .ab-bottom-icons {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    border-top: 1px solid #e9e9e9;
+    font-size: 12px;
+    .ab-bottom-one-icon {
+      position: relative;
+      float: left;
+      width: 25%;
+      height: 100%;
+      color: #909096;
+      .ab-bottom-icon-wrap {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        width: auto;
+        img {
+          margin-top: -50%;
+          margin-left: -50%;
+        }
+        span {
+          position: absolute;
+          top: -12px;
+          right: -2px;
+        }
+      }
+    }
+  }
+}
+.ab-show-sources {
+  max-height: 283px;
+  height: 282px;
+  transition: max-height 0.35s ease-in;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  width: 300px;
+  background-color: #2c2c2c;
+  border-radius: 0 0 2px 2px;
+  overflow: scroll;
+
+  &.ab-sources-hidden {
+    max-height: 0;
+    transition: max-height 0.25s ease-out;
+    overflow: hidden;
   }
 }
