bound element picker

--- a/app/styles.less/popup.less
+++ b/app/styles.less/popup.less
@@ -29,6 +29,7 @@
     }
   }
   .ab-icon-cog {
+    cursor: pointer;
     float: right;
     width: 24px;
     height: 24px;
@@ -47,6 +48,7 @@
     .ab-popup-menu-item {
       width: 100%;
       float: left;
+      cursor: pointer;
       padding-left: 15px;
       padding-top: 23px;
       line-height: 20px;
@@ -74,6 +76,7 @@
       width: 25%;
       height: 100%;
       color: #909096;
+      outline: none;
       .ab-bottom-icon-wrap {
         position: absolute;
         top: 40%;
