--- a/app/styles.less/common/grid.less
+++ b/app/styles.less/common/grid.less
@@ -1,3 +1,12 @@
-.hidden {
-  display: none !important;
+.m-t {
+  margin-top: 15px;
+}
+.m-r {
+  margin-right: 15px;
+}
+.m-b {
+  margin-bottom: 15px;
+}
+.m-l {
+  margin-left: 15px;
 }
