--- a/app/styles.less/settings.less
+++ b/app/styles.less/settings.less
@@ -1,2 +1,99 @@
+@import "common/grid";
 @import "../../node_modules/bootstrap/less/bootstrap";
 
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 17px;
+  margin: 3px 13px 3px 3px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #5cb85c;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #5cb85c;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(13px);
+  -ms-transform: translateX(13px);
+  transform: translateX(13px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 17px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.listEntry {
+  float: none;
+  height: 23px;
+  a, span {
+    float: left;
+    height: 23px;
+    line-height: 23px;
+  }
+}
+
+.hidden-textarea {
+  display: none;
+}
+
+.edit {
+  .hidden-textarea {
+    display: inline-block;
+  }
+}
+
+.rules-сontainer {
+  position: relative;
+  textarea {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    outline: 1px solid #ddd;
+    border: 0;
+    padding: 5px;
+  }
+  ul {
+    padding: 5px;
+  }
+}
