--- a/app/styles.less/settings.less
+++ b/app/styles.less/settings.less
@@ -94,6 +94,9 @@ input:checked + .slider:before {
     padding: 5px;
   }
   ul {
-    padding: 5px;
+    padding: 5px 0;
+    li {
+      padding: 0 5px;
+    }
   }
 }
