--- a/app/styles.less/settings.less
+++ b/app/styles.less/settings.less
@@ -100,3 +100,15 @@ input:checked + .slider:before {
     }
   }
 }
+
+.ab-ads-level {
+  text-decoration: none !important;
+  span {
+    display: none;
+  }
+  &.selected {
+    span {
+      display: inline;
+    }
+  }
+}
