--- a/app/styles.less/elements/toggle_switch.less
+++ b/app/styles.less/elements/toggle_switch.less
@@ -17,6 +17,7 @@
   background-color: #ff455f;
   -webkit-transition: .6s;
   transition: .6s;
+  text-transform: uppercase;
 
   &:before {
     position: absolute;
@@ -28,7 +29,7 @@
     font-size: 12px;
     //font-weight: bold;
     letter-spacing: 1px;
-    color: #909096;
+    color: #2c2c2c;
     width: 84px;
     left: 2px;
     bottom: 2px;
@@ -53,9 +54,9 @@ input {
       background-color: #068ffc;
       &:before {
         content: "__MSG_advertisementOn__";
-        -webkit-transform: translateX(46px);
-        -ms-transform: translateX(46px);
-        transform: translateX(46px);
+        -webkit-transform: translateX(36px);
+        -ms-transform: translateX(36px);
+        transform: translateX(36px);
       }
     }
   }
