--- a/app/styles.less/popup.less
+++ b/app/styles.less/popup.less
@@ -190,8 +190,8 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 50px;
-    border-top: 1px solid #e9e9e9;
+    height: 32px;
+    background-color: #f4f4f4;
     font-size: 12px;
     .ab-bottom-one-icon {
       position: relative;
