start firefox build making

--- a/app/styles.less/elements/toggle_switch.less
+++ b/app/styles.less/elements/toggle_switch.less
@@ -21,7 +21,8 @@
 
   &:before {
     position: absolute;
-    content: "__MSG_advertisementOff__";
+    //content: "__MSG_advertisementOff__";
+    content: "";
     height: 20px;
     line-height: 20px;
     //font-family: PTSans;
@@ -53,7 +54,8 @@ input {
     + .slider {
       background-color: #068ffc;
       &:before {
-        content: "__MSG_advertisementOn__";
+        //content: "__MSG_advertisementOn__";
+        content: "";
         -webkit-transform: translateX(36px);
         -ms-transform: translateX(36px);
         transform: translateX(36px);
