--- a/app/styles.less/popup.less
+++ b/app/styles.less/popup.less
@@ -6,7 +6,7 @@
   position: relative;
   border-left: 1px solid #fff;
   width: 241px;
-  height: 390px;
+  height: 430px;
   padding: 1px 1px 0 0;
   background-color: #fff;
   .ab-top-panel {
@@ -45,7 +45,7 @@
   }
   .ab-show-ads-class {
     width: 150px ;
-    height: 93px;
+    height: 133px;
     margin: 21px auto 0;
 
     svg {
@@ -238,6 +238,36 @@
           top: -2px;
           right: -13px;
         }
+      }
+    }
+  }
+  .ab-undefined-ad-class {
+    height: 168px;
+    width: 239px;
+    .icon-no {
+      margin: 22px auto 17px;
+      height: 90px;
+      width: 90px;
+      .glyphicon {
+        color: #aaa;
+        font-size: 90px;
+        line-height: 90px;
+        text-align: center;
+        transform: rotate(45deg)
+      }
+    }
+    .ab-undefined-ad-text {
+      width: 160px;
+      margin: 0 auto;
+      font-size: 10px;
+      text-align: center;
+      line-height: 14px;
+      color: #2c2c2c;
+      a {
+        font-size: 8px;
+        line-height: 10px;
+        margin-top: 5px;
+        color: #909096;
       }
     }
   }
